# repoclip

./: README.md  pyproject.toml
app/: main.py  models.py  services.py  utils.py
static/: index.css  index.html  index.js
