[project]
name = "repoclip"
version = "0.1.0"
description = ""
authors = [
    {name = "dd3ok",email = "hwick@kakao.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111,<0.117",
    "uvicorn[standard]>=0.30,<0.36",
    "python-multipart>=0.0.9,<0.1.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
